--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         }
     ],
     "require": {
-        "php": "^8.1"
+        "php": "^8.1",
+        "league/flysystem-aws-s3-v3": "^3.0",
     },
     "autoload": {
         "psr-4": {
