--- a/composer.json
+++ b/composer.json
@@ -2,17 +2,12 @@
     "name": "webbycrown/s3-extension-for-bagisto",
     "description": "S3 Extension for Bagisto",
     "type": "library",
+    "version": "1.0.0",
     "license": "MIT",
     "authors": [
         {
             "name": "WebbyCrown Solutions",
             "email": "info@webbycrown.com"
-        }
-    ],
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "https://github.com/webbycrown/s3-extension-for-bagisto"
         }
     ],
     "require": {
@@ -32,5 +27,5 @@
             "aliases": {}
         }
     },
-    "minimum-stability": "dev"
+    "minimum-stability": "stable"
 }
